ecmascript/parser/tests/test262-error-references/fail/4cce9feb5a563377.js.stderr
error: Parenthesized expression cannot contain spread operator
 --> $DIR/tests/test262-parser/fail/4cce9feb5a563377.js:1:7
  |
1 | (a,...a)
  |       ^

